# LearnOpenGL

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Breakout/: CMakeLists.txt
Breakout/Breakout/: BallObject.cpp  BallObject.hpp  Collisions.cpp  Collisions.hpp  Game.cpp  Game.hpp  GameLevel.cpp  GameLevel.hpp  GameObject.cpp  GameObject.hpp  Particle.cpp  Particle.hpp  ParticleGenerator.cpp  ParticleGenerator.hpp  PostProcessor.cpp  PostProcessor.hpp  PowerUp.cpp  PowerUp.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  main.cpp
Breakout/assets/levels/: three.lvl  two.lvl
Breakout/assets/shaders/: post-processing.frag  post-processing.vert  text-shader.frag  text-shader.vert
Glad/: CMakeLists.txt
Glad/src/: glad.cpp
src/: CMakeLists.txt  Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  Texture.hpp  Window.hpp  main.cpp
src/assets/: light-shader.vert  material-shader.frag  material-shader.vert  shader.frag  shader.vert
src/assets/shaders/: light-shader.frag  material-shader.frag  multi-light-shader.frag
